# artouste

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  ROADMAP.md  build.bat  build.sh  launch.bat  launch.sh
.github/workflows/: release.yml
assets/: config.default.txt  config.txt
assets/models/: Alouette-II.md
assets/models/Alouette-II/: Read-Me.txt
assets/models/Alouette-II/Models/: alouette.ac  tailguard.ac
assets/models/Alouette-II/Models/Interior/: interior.ac
assets/models/Alouette-II/Models/Interior/Panel/: panel.ac
assets/models/Alouette-II/Models/Interior/Panel/Instruments/ai/: ai.ac
assets/models/Alouette-II/Models/Interior/Panel/Instruments/alt/: alt.ac
assets/models/Alouette-II/Models/Interior/Panel/Instruments/asi/: asi.ac
assets/models/Alouette-II/Models/Interior/Panel/Instruments/collective/: collective.ac
assets/models/Alouette-II/Models/Interior/Panel/Instruments/hi/: hi.ac
assets/models/Alouette-II/Models/Interior/Panel/Instruments/pedals/: pedals.ac
assets/models/Alouette-II/Models/Interior/Panel/Instruments/rmi/: rmi.ac
assets/models/Alouette-II/Models/Interior/Panel/Instruments/torque/: torque.ac
assets/models/Alouette-II/Models/Interior/Panel/Instruments/vor/: vor.ac
assets/models/Alouette-II/Models/Interior/Panel/Instruments/vsi/: vsi.ac
assets/models/Alouette-II/Models/Interior/Panel/Instruments/yokes/: yoke.ac
assets/models/Alouette-II/Models/Pilot/: general_pilot.ac
assets/models/helipad/: helipad.ac
assets/shaders/: basic.frag  basic.vert  building.frag  building.vert  flat.frag  flat.vert  model.frag  model.vert  sea.frag  sea.vert  shadow.frag  shadow.vert  sky.frag  sky.vert  terrain.frag  terrain.vert
assets/terrain/: terrain.txt
assets/terrain/arcachon/: helipads.txt  landmarks.txt  terrain.txt
assets/terrain/bordeaux/: helipads.txt  landmarks.txt  terrain.txt
assets/terrain/cauterets/: helipads.txt  landmarks.txt  terrain.txt
assets/terrain/cote-landes/: helipads.txt  landmarks.txt  terrain.txt
assets/terrain/ossau/: landmarks.txt  terrain.txt
cmake/: Dependencies.cmake
docs/: HELIPADS.md  HELIPADS.tsv  PROCEDURE_VOL.md  SOUNDS.md  TERRAIN.md  index.html
docs/tableau-de-bord/: LISEZMOI.md  PANEL.md
src/: CMakeLists.txt  main.cpp
src/app/: AppConstants.hpp  Application.cpp  Application.hpp  ApplicationCapture.cpp  ApplicationGround.cpp  ApplicationHud.cpp  ApplicationInput.cpp  ApplicationLoop.cpp  ApplicationRender.cpp  ApplicationScene.cpp  Clock.hpp  Config.cpp  Config.hpp  DemoPilot.cpp  DemoPilot.hpp  DemoPilotDetail.hpp
src/audio/: AudioEngine.cpp  AudioEngine.hpp  AudioEngineControl.cpp  AudioEngineImpl.hpp  RadioStream.cpp  RadioStream.hpp  RingBuffer.cpp  RingBuffer.hpp
src/input/: Gamepad.cpp  Gamepad.hpp  InputSystem.cpp  InputSystem.hpp  Keyboard.cpp  Keyboard.hpp
src/physics/: ArcadeFlight.cpp  ArcadeFlight.hpp  Controls.hpp  FlightAssist.cpp  FlightAssist.hpp  FlightModel.cpp  FlightModel.hpp  FlightState.hpp  RigidBody.cpp  RigidBody.hpp  Turbine.cpp  Turbine.hpp  constants.hpp
src/render/: Buildings.cpp  Buildings.hpp  Camera.cpp  Camera.hpp  HelicopterModel.cpp  HelicopterModel.hpp  LoadedHelicopter.cpp  LoadedHelicopter.hpp  LoadedHelicopterDetail.hpp  LoadedHelicopterDraw.cpp  LoadedHelicopterInstruments.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  Primitives.cpp  Primitives.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Terrain.cpp  Terrain.hpp  TerrainSetup.cpp  Texture.cpp  Texture.hpp
src/tools/: gamepad_probe.cpp  model_probe.cpp
src/ui/: Hud.cpp  Hud.hpp  HudOverlay.cpp  HudWidgets.hpp
src/util/: Math.hpp
tests/: CMakeLists.txt  arcade_flight_tests.cpp  config_tests.cpp  flight_assist_tests.cpp  flight_model_tests.cpp  placeholder_tests.cpp  ring_buffer_tests.cpp
tools/: fetch_buildings.py  fetch_terrain.py
tools/helipad/: make_helipad.py  make_texture.py
tools/livree/: check_tailrotor.py  make_decals.py  make_gendarmerie.py  make_mainrotor.py  make_tailguard.py  make_tailrotor.py
tools/terrain/: __init__.py  config.py  ortho.py  outputs.py  relief.py  zones.py
